# CTF-CyberAgent-Workbench

./: .gitattributes  .gitignore  README.md  go.mod  go.sum
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
analyzers/: Cargo.toml  README.md
analyzers/fixture/: Cargo.toml
analyzers/fixture/src/: lib.rs  main.rs
analyzers/fixture/tests/: shared_vectors.rs
analyzers/testdata/: analyzer_protocol_v1_vectors.json  archive_inventory_v1_vectors.json
cmd/cyberagent/: main.go
cmd/cyberagent-desktop/: main_windows.go  main_windows_test.go  workspace_launcher_windows.go  workspace_launcher_windows_test.go
configs/: models.yaml  policy.yaml  sandbox-docker-simulation.example.json  sandbox-manifest.example.json  sandbox-output-fixture.example.json  tools.yaml
docs/: DESKTOP_PLAN.md  PROGRESS_BOOK.md  PROJECT_MEMORY.md  PROJECT_STATUS.md  SKILL_PACKAGE_PLAN.md  TASK_BOOK.md  architecture.md  errors.md  http-api.md  openapi.json  usage.md
docs/adr/: 0001-go-control-plane.md  0002-run-centric-runtime.md  0003-run-execution-modes.md  0004-plan-delivery-workflow.md  0005-operator-steering-queue.md  0006-operator-steering-controls.md  0007-specialist-skill-context.md  0008-sandbox-manifest-boundary.md  0009-sandbox-approval-candidate.md  0010-disabled-sandbox-lifecycle.md  0011-disabled-sandbox-preflight.md  0012-simulation-only-sandbox-evidence.md  (+60 more)
scripts/: build-desktop.ps1  check-windows-compat.ps1
web/: README.md  assets_desktop.go  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
(+903 files in other folders)
